# hindusthan

./: .env  Dockerfile  pyproject.toml
src/hindusthan/: main.py  model_generator.py
src/hindusthan/auth/models/: user_model.py
src/hindusthan/auth/routers/: user_routes.py
src/hindusthan/auth/schemas/: user_schemas.py
src/hindusthan/auth/utils/: auth_utils.py
src/hindusthan/customer/models/: customer_model.py
src/hindusthan/customer/routers/: customer_routes.py
src/hindusthan/customer/schemas/: customer_schemas.py
src/hindusthan/database/: database.py
